# nextstep_backend

./: .env  .gitignore  PROFILE_FRONTEND_UI_GUIDE.md  README.md  pyproject.toml
src/: app.py  bootstrap.py  router.py
src/context/identity_access/: bootstrap.py  dependencies.py  router.py
src/context/identity_access/api/: dependencies.py  events.py
src/context/identity_access/api/routes/: auth.py  users.py
src/context/identity_access/api/schemas/: requests.py  responses.py
src/context/identity_access/application/exceptions/: __init__.py  invalid_otp.py  otp_expired.py
src/context/identity_access/application/ports/: __init__.py  i_hash_service.py
src/context/identity_access/domain/entities/: __init__.py  account.py  user.py  verification.py
src/context/identity_access/domain/enums/: __init__.py  provider_enums.py  verification_delivery_method.py  verification_type.py
src/context/identity_access/domain/events/: __init__.py  email_verified.py  user_registered.py
src/context/identity_access/domain/exceptions/: __init__.py  account_already_exists.py  account_not_found.py  user_not_found_error.py
src/context/identity_access/domain/ports/: __init__.py  i_user_repository.py  i_verification_repository.py
src/context/identity_access/domain/value_objects/: __init__.py  account_id.py  email_str.py  provider.py  verification_id.py  verification_token.py  (+1 more)
src/context/profile/: bootstrap.py  dependencies.py  router.py
src/context/shared_kernel/: dependencies.py
src/core/: broker.py  database.py  mediator.py  oauth.py  settings.py  vector_db.py
(+116 files in other folders)
